# keyboard_ESP32-S3

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
docs/ESP32S3/: JTAG.md
examples/mode_change/: sdkconfig  sdkconfig.old
examples/mode_change/main/: CMakeLists.txt  main.c
examples/mode_change/main/include/: change_mode_interrupt.h  mode_gpio.h
examples/mode_change/main/include/ble/: ble_main.h  hid_dev.h  hidd_le_prf_int.h
examples/mode_change/main/include/ble50/: ble50_main.h
examples/mode_change/main/include/hid/: hid.h
examples/mode_change/main/src/: mode_gpio.c
examples/mode_change/main/src/ble/: ble_main.c  esp_hidd_prf_api.c  hid_dev.c  hid_device_le_prf.c
examples/mode_change/main/src/ble50/: ble50_main.c
examples/mode_change/main/src/esp_now/: esp_now_main.c
examples/mode_change/main/src/hid/: hid.c
examples/mode_change/main/src/hid_custom/: hid_custom.c
examples/mode_change/main/src/mode_gpio/: change_mode_interrupt.c  mode_gpio.c
examples/mode_change/main/src/tusb/: tusb_main.c
examples/mode_change_esp32/: sdkconfig  sdkconfig.old
examples/mode_change_esp32/main/: CMakeLists.txt  idf_component.yml  main.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: mode_gpio.h
main/include/btn_progress/: btn_progress.h
main/include/descriptors/: descriptors.h
main/include/esp_now/: esp_now_main.h
main/include/hid_custom/: hid_custom.h
main/include/tusb/: tusb_main.h
main/src/ble/: ble_main.c  esp_hidd_prf_api.c  hid_device_le_prf.c
main/src/esp_now/: esp_now_main.c
main/src/hid_custom/: hid_custom.c
(+14 files in other folders)
